fixed spacing between projects

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -171,7 +171,7 @@ footer img {
     .horiseon-project, .prework-study-guide {
         width: 80%;
         margin: 0 auto;
-        margin-bottom: 20px;
+        margin-bottom: 2%;
     }
 
     .css-mini-project-img-wrapper {
